--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>So I can just hit, like, *upload* and it just appears on the internet</h1>
+<p>Shiiiiiiiiit.</p>
 </body>
 </html>
